--- a/src/jaet/Views/lexicalAnalyzer.fxml
+++ b/src/jaet/Views/lexicalAnalyzer.fxml
@@ -9,39 +9,57 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="484.0" prefWidth="691.0" style="-fx-background-color: #83a4d4;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jaet.Views.LexicalController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="562.0" prefWidth="762.0" style="-fx-background-color: #2c3e50;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jaet.Views.LexicalController">
    <children>
-      <TextArea fx:id="terminal" layoutX="14.0" layoutY="73.0" prefHeight="298.0" prefWidth="349.0" promptText="Ingrese su codigo">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="518.0" layoutX="-6.0" layoutY="25.0" stroke="TRANSPARENT" strokeType="INSIDE" width="769.0">
+         <fill>
+            <LinearGradient endX="0.6238095238095238" endY="1.0">
+               <stops>
+                  <Stop color="BLACK" />
+                  <Stop color="#54acffed" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </fill>
+      </Rectangle>
+      <TextArea fx:id="terminal" layoutX="14.0" layoutY="117.0" prefHeight="291.0" prefWidth="474.0" promptText="Ingrese su codigo">
          <font>
             <Font size="15.0" />
          </font>
       </TextArea>
-      <TableView fx:id="tableLexicon" layoutX="371.0" layoutY="73.0" prefHeight="298.0" prefWidth="299.0">
+      <TableView fx:id="tableLexicon" layoutX="498.0" layoutY="117.0" prefHeight="400.0" prefWidth="256.0">
         <columns>
-          <TableColumn fx:id="tableColumnLexicon" prefWidth="119.0" text="Léxico" />
-          <TableColumn fx:id="tableColumnToken" prefWidth="190.0" text="Token" />
+          <TableColumn fx:id="tableColumnLexicon" prefWidth="100.0" text="Léxico" />
+          <TableColumn fx:id="tableColumnToken" prefWidth="209.0" text="Token" />
         </columns>
       </TableView>
-      <Label layoutX="276.0" layoutY="23.0" prefHeight="44.0" prefWidth="105.0" text="JAET">
+      <Label layoutX="344.0" layoutY="39.0" prefHeight="56.0" prefWidth="137.0" text="JAET">
          <font>
-            <Font size="34.0" />
+            <Font name="Bell MT Bold" size="46.0" />
          </font>
          <textFill>
             <LinearGradient endX="0.7523809523809524" endY="0.12857142857142856" startX="0.7523809523809524" startY="0.7761904761904761">
                <stops>
-                  <Stop color="#0000007d" />
+                  <Stop color="#fff2007d" />
                   <Stop color="#a80b0b" offset="1.0" />
                </stops>
             </LinearGradient>
          </textFill>
       </Label>
-      <Button fx:id="btnAnalyze" layoutX="234.0" layoutY="391.0" mnemonicParsing="false" onMouseClicked="#CompileAnalyzer" prefHeight="40.0" prefWidth="128.0" style="-fx-background-color: #fffde4;" text="Compilar">
+      <Button fx:id="btnAnalyze" layoutX="604.0" layoutY="67.0" mnemonicParsing="false" onMouseClicked="#CompileAnalyzer" prefHeight="40.0" prefWidth="128.0" style="-fx-background-color: #52c234;" text="Compilar">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Button>
+      <TextArea fx:id="txtF" layoutX="14.0" layoutY="436.0" prefHeight="82.0" prefWidth="474.0" />
+      <Label layoutX="17.0" layoutY="418.0" prefHeight="17.0" prefWidth="105.0" text="Terminal:  Local" textFill="WHITE">
+         <font>
+            <Font name="Bell MT" size="14.0" />
+         </font>
+      </Label>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff40" height="17.0" layoutX="14.0" layoutY="418.0" stroke="#ffffff00" strokeType="INSIDE" width="474.0" />
    </children>
    <styleClass>
       <String fx:value="background: -webkit-linear-gradient(to right, #83a4d4, #b6fbff)" />
